--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,7 +42,7 @@
   opacity: 0;
   pointer-events: none; 
   transform: translateY(-100%);
-  transition: transform 0.5s ease, opacity 0.5s ease;
+  transition: transform 0.7s ease, opacity 0.7s ease;
 }
 
 #modal.active {
@@ -50,6 +50,7 @@
   opacity: 1;
   pointer-events: auto;
   transform: translateY(0);
+  /* transition: transform 0.7s ease, opacity 0.7s ease; */
 }
 
 
@@ -72,8 +73,8 @@
   opacity: 1;
   pointer-events: auto;
   transform: translateY(0);
-} */
-
+}
+ */
 
 /* Scrollbar width */
 ::-webkit-scrollbar {
